--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "restfulExpressServer.js",
   "scripts": {
     "lint": "eslint",
-    "start": "nodemon",
+    "start": "./node_modules/.bin/nodemon server.js",
     "test": "mocha"
   },
   "repository": {
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "express": "^4.18.1",
     "mocha": "^3.0.2",
     "rewire": "^2.5.2",
     "supertest": "^2.0.0"
