--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.19.4",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
